--- a/20220427.md
+++ b/20220427.md
@@ -3,3 +3,10 @@ Hadoop目前用來當作雲端運算架構使用<br>
 Hadoop是在Google以創新的網路搜尋開始發展時，從其中技術裡發現的其他技術<br>
 著重於資料分類和處理的技術層面
 而至於為什麼叫Hadoop是因為創作者兒子的大象玩具名稱為:Hadoop :)<br>
+# 20220429
+而Hadoop在資料解剖上主要有四個模型：<br>
+1.Hadoop Common<br>
+2.Hadoop Distributed FIle System<br>
+3.Hadoop MapReduce<br>
+4.Hadoop YARN<br>
+以下將解析每個模型的用途：<br>
