--- a/20220427.md
+++ b/20220427.md
@@ -41,6 +41,6 @@ bin/hadoop
 ```
 # 2022053
 昨日0502進行以Docker container為模擬機器來實作Hadoop環境練習<br>
-以<p>https://iter01.com/525143.html</p>網址的教學步驟來進行練習<br>
-目前已經完成Image Build、network create、hosts and ssh等步驟<br>
+以https://iter01.com/525143.html網址的教學步驟來進行練習<br>
+目前已經完成:```Image Build、network create、hosts and ssh```等步驟<br>
 目前卡關在從網站上下載的hadoop資料裡面並沒有etc資料夾讓我使用，還在尋找原因<br>
