--- a/測試日記.md
+++ b/測試日記.md
@@ -39,8 +39,15 @@ and try the following command:
 ```
 bin/hadoop
 ```
-# 2022053
+# 20220503
 昨日0502進行以Docker container為模擬機器來實作Hadoop環境練習<br>
 以https://iter01.com/525143.html網址的教學步驟來進行練習<br>
 目前已經完成:```Image Build、network create、hosts and ssh```等步驟<br>
 目前卡關在從網站上下載的hadoop資料裡面並沒有etc資料夾讓我使用，還在尋找原因<br>
+
+# 20220510
+補上次未更新的部分，後來發現Hadoop官網上面可以下載的Hadoop壓縮文件有3種<br>
+Hadoop.src.tar<br>
+Hadoop.website.tar<br>
+Hadoop.tar<br>
+由於之前一直下載的是Hadoop.src.tar所以裡面才沒有etc等文件，重新下載Hadoop.tar之後就有etc可以使用了<br>
