--- a/測試日記.md
+++ b/測試日記.md
@@ -51,3 +51,10 @@ Hadoop.src.tar<br>
 Hadoop.website.tar<br>
 Hadoop.tar<br>
 由於之前一直下載的是Hadoop.src.tar所以裡面才沒有etc等文件，重新下載Hadoop.tar之後就有etc可以使用了<br>
+
+目前操作下來，直到啟動hadoop前都正常，啟動Hadoop時出現以下錯誤：<br>
+
+```
+[root@71b89186255c /]# hdfs namenode -format
+qemu-x86_64: Could not open '/lib64/ld-linux-x86-64.so.2': No such file or directory
+```
