--- a/測試日記.md
+++ b/測試日記.md
@@ -58,3 +58,5 @@ Hadoop.tar<br>
 [root@71b89186255c /]# hdfs namenode -format
 qemu-x86_64: Could not open '/lib64/ld-linux-x86-64.so.2': No such file or directory
 ```
+上網尋找問題時，得知由於現在我所使用的電腦是Macbook air m1晶片<br>
+測試時需要在docker run 上面加上 --platform=linux/amd64 來解決問題<br>
