hadoop namenode ok20220511 night

--- a/測試日記.md
+++ b/測試日記.md
@@ -60,3 +60,22 @@ qemu-x86_64: Could not open '/lib64/ld-linux-x86-64.so.2': No such file or direc
 ```
 上網尋找問題時，得知由於現在我所使用的電腦是Macbook air m1晶片<br>
 測試時需要在docker run 上面加上 --platform=linux/amd64 來解決問題<br>
+
+# 20220511
+昨日--platform問題可以用以下方式進行解決：<br>
+```
+FROM --platform=amd64 centos7-ssh
+```
+透過添加--platform設定linux軟體為amd64<br>
+添加完畢之後```hdfs namenode -format``` 可以執行但會出現錯誤<br>
+錯誤原因是因為要設定以下變數
+```
+   48  export HDFS_NAMENODE_USER=root
+   49  export HDFS_DATANODE_USER=root
+   50  export HDFS_SECONDARYNAMENODE_USER=root
+   51  export YARN_RESOURCEMANAGER_USER=root
+   52  export YARN_NODEMANAGER_USER=root
+```
+除了手動之外，應該可以將設定寫在dockerfile裡面去預設好需要再進行研究<br>
+目前進行到``` start-all.sh ``` <br>
+會發現他只出現hadoop1的相關資訊，需要進行叢集(slave)設定<br>
