--- a/測試日記.md
+++ b/測試日記.md
@@ -79,3 +79,7 @@ FROM --platform=amd64 centos7-ssh
 除了手動之外，應該可以將設定寫在dockerfile裡面去預設好需要再進行研究<br>
 目前進行到``` start-all.sh ``` <br>
 會發現他只出現hadoop1的相關資訊，需要進行叢集(slave)設定<br>
+
+# 20220512
+昨日hadoop啟動完成，但之後不知道要如何使用Hadoop，就找了之前別間學校的教學ppt並且將裡面所需要的環境變數設置添加到dockerfile hadoop.dockerfile上面，這樣就不用每次重新打開都要設定環境變數<br>
+
