--- a/環境建立.md
+++ b/環境建立.md
@@ -1,6 +1,8 @@
 # step1 docker build
-``` docker build -f Server.dockerfile -t="centos7-ssh" ```
-``` docker build -f hadoop.dockerfile -t="hadoop" ```
+``` 
+    docker build -f Server.dockerfile -t="centos7-ssh" 
+    docker build -f hadoop.dockerfile -t="hadoop" 
+```
 # step2 create docker-network
 ``` docker network create --driver bridge hadoop-br ```
 # step3 run container with network(also use docker-compose)
