--- a/環境建立.md
+++ b/環境建立.md
@@ -4,7 +4,9 @@
     docker build -f hadoop.dockerfile -t="hadoop" 
 ```
 # step2 create docker-network
-``` docker network create --driver bridge hadoop-br ```
+``` 
+    docker network create --driver bridge hadoop-br 
+```
 # step3 run container with network(also use docker-compose)
 ``` 
     docker run -itd --network hadoop-br --name hadoop1 -p 50070:50070 -p 8080:8080 hadoop 
