--- a/環境建立.md
+++ b/環境建立.md
@@ -13,4 +13,31 @@
     docker run -itd --network hadoop-br --name hadoop2  hadoop
     docker run -itd --network hadoop-br --name hadoop3  hadoop
 ```
+# step4 vim /etc/hosts and ssh-keygen(此步驟自動化可能需要用docker-compose進行)
+```
+    vim /etc/hosts
+```
+172.18.0.2 hadoop1 <br>
+172.18.0.3 hadoop2 <br>
+172.18.0.4 hadoop3 <br>
+```
+    ssh-keygen
+```
+    enter即可
+```
+    ssh-copy-id -i /root/.ssh/id_rsa -p 22 root@hadoop1
+    ssh-copy-id -i /root/.ssh/id_rsa -p 22 root@hadoop2
+    ssh-copy-id -i /root/.ssh/id_rsa -p 22 root@hadoop3
+```
 
+# step5 hadoop config 
+```
+    mkdir /home/hadoop
+    mkdir /home/hadoop/tmp /home/hadoop/hdfs_name /home/hadoop/hdfs_data
+    cd $HADOOP_HOME/etc/hadoop/
+    vim core-site.xml
+    vim hdfs-site.xml
+    vim mapred-site.xml
+    vim yarn-site.xml
+    vim workers
+```
